--- a/StardewValleyFishes/StardewValleyFishes.csproj
+++ b/StardewValleyFishes/StardewValleyFishes.csproj
@@ -1,8 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Pages\Index1.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Index1.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StardewValleyFishes.Core\StardewValleyFishes.Core.csproj" />
+    <ProjectReference Include="..\StardewValleyFishes.Data\StardewValleyFishes.Data.csproj" />
+  </ItemGroup>
 
 
 
